--- a/shard.yml
+++ b/shard.yml
@@ -1,9 +1,14 @@
 name: uuid
-version: 0.1.0
+version: 0.7.1
 
 authors:
-  - Jack Thorne <javajax@gmail.com>
+  - Jack Thorne <jack@kilmer.co>
 
 crystal: 0.23.1
+
+development_dependencies:
+  minitest:
+    git: https://github.com/ysbaddaden/minitest.cr.git
+    version: ~> 0.3.4
 
 license: MIT
